test/cases/compile_errors/stage1/obj/saturating_shl_assign_does_not_allow_negative_rhs_at_comptime.zig
export fn a() void {
    comptime {
      var x = @as(i32, 1);
      x <<|= @as(i32, -2);
  }
}

// error
// backend=stage1
// target=native
//
// error: shift by negative value -2
